2000-11-06  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/smidump.c: addModule() now inserts NULL module at the
	head of the list as expected by the dump drivers.

	* lib/check.c: Added checks for OID redifinitions and recursive
	definitions, based on a contribution from Bill Fenner.

	* lib/smi.h.in: Added a SmiModule.conformance attribute that
	allows applications to determine, `how syntactically correct'
	a module is.

2000-11-04  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* mibs/ietf/DISMAN-EVENT-MIB: added (RFC 2981).

	* mibs/ietf/DISMAN-EXPRESSION-MIB: added (RFC 2982). It needed
	a small fix.

2000-11-01  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/smi.c: Reworked the smiPath initialization upon a hint
	from Bill Fenner. Note that the order of evaluation of the SMIPATH
	environment variable and configuration files has changed and that
	the syntax of `path' commands in configuration files has changed.
	See smi_config(3), section MODULE LOCATIONS for details.

2000-10-27  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/check.c: Juergen fixed index checks for Bits/fixed-length
	octet strings.

2000-10-25  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/smidump.c: Removed again `-X' option to eliminate parser
	options that might lead to different results.

2000-10-21  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/error.c: Added a fourth arg to the error handler representing
	the error name. This has been wished and contributed by Bill Fenner.
	Note that this changed the API slightly.

2000-10-20  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/check.c: Fixed index length checks for OCTET STRINGs,
	IpAddresses and OBJECT-IDENTIFIERs. Thanks to Bill Fenner.

	* lib/error.c: Fixed two minor typos. Thanks to Bill.

2000-10-19  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/dump-python.c: a new dump format to generate Python MIB
	dictionary code. Contributed by Pat Knight.

	* tools/dump-xml.c: Fixed missing end tag of rows and tables